--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h1{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 4rem;
     margin-bottom: 10px;
     border-radius: 10px;
     background: linear-gradient(145deg, #d87373, #ff8989);
@@ -32,6 +33,7 @@ h1{
 }
 
 .form-control{
+    font-family: 'Roboto', sans-serif;
     border: none; 
     border-style: none;
     display: block;
@@ -42,6 +44,8 @@ h1{
     border-radius: 10px;
     box-shadow:  6px 6px 12px #d16f6f,
                  -6px -6px 12px #ff9191;
+    text-align: center;
+    font-weight: 600;
 
 }
 
